Fix Checkbox alignment and media heading's margin

--- a/src/sass/app_2/_common/components/media-item.scss
+++ b/src/sass/app_2/_common/components/media-item.scss
@@ -6,7 +6,7 @@
         @include themify($themes) {
             color: themed('text_primary_color');
         }
-        margin: 0 0 16px;
+        margin: 0 0 8px;
     }
     &__icon {
         min-width: 160px;
